--- a/docs/report.tex
+++ b/docs/report.tex
@@ -12,9 +12,9 @@
 \title{Rastreamento e Monitorização da Execução de Programas\\
 \Large Universidade do Minho}
 
-\author{Miguel António Vaz Pinto Pereira (a72161) \and
-João Luís da Cruz Pereira (a95375) \and
-Maria Helena Alves Machado Marques Salazar (a75635)\\}
+\author{João Luís da Cruz Pereira (a95375) \and
+Maria Helena Alves Machado Marques Salazar (a75635) \and
+Miguel António Vaz Pinto Pereira (a72161)\\}
 \date{April, May 2023}
 
 \begin{document}
